--- a/res/values/kasumi_strings.xml
+++ b/res/values/kasumi_strings.xml
@@ -10,7 +10,7 @@
     <string name="kasumi_codename">Codename</string>
     <string name="kasumi_codename_summary">PoPiPa</string>
     <string name="kasumi_founder">ROM Founder</string>
-    <string name="kasumi_founder_summary">Bedirhan KURT</string>
+    <string name="kasumi_founder_summary">Beru Shinsetsu</string>
     <string name="kasumi_tg_chat">Official Telegram Chat</string>
     <string name="kasumi_tg_chat_summary">@KasumiChat</string>
 
